--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="10" />
 
-    <uses-permission android:name="android.permission.INTERNET" /> 
-    
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,7 +17,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.tau.dashboard.MainActivity"
-            android:label="@string/app_name" >
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
